# arxiv-scraper

./: .env.example  .flake8  .gitignore  README.md  alembic.ini  arxiv.db  init.sql  main.py  manage.py  package-lock.json  pyproject.toml
alembic/: env.py
project/: celery.py  config.py  settings.py  urls.py
project/arxiv/: apps.py  models.py  plugin.py
project/arxiv/migrations/: 0001_initial.py
project/arxiv/tests/: conftest.py  test_parse.py
project/arxiv/tests/html/: no_updates_for_time_period.html  total_entries.html
project/arxiv/utils/: parse.py  scrape.py  sql.py
project/core/: admin.py  apps.py  models.py  plugin.py  plugins.py  signals.py  urls.py  utils.py  views.py
project/core/fixtures/: category.json  plugin.json
project/core/migrations/: 0001_initial.py
project/core/templates/core/: index.html
project/core/templates/core/plugins/: detail.html
project/core/tests/: conftest.py  test_models.py
project/core/utils/: request.py  sql.py  utils.py
project/plugins/arxiv/: admin.py  apps.py  models.py  plugin.py  scrape.py  urls.py  views.py
project/plugins/arxiv/fixtures/: archive.json
project/plugins/arxiv/migrations/: 0001_initial.py  0002_initial.py
project/plugins/arxiv/static/arxiv/: style.css
project/plugins/arxiv/templates/arxiv/: index.html
project/plugins/arxiv/tests/: conftest.py  test_models.py  test_parse.py
src/: config.py  main.py  manage.py  models_sqlalchemy.py  parse.py  request.py  requester.py  scrape.py  scraper.py  settings.py  sql.py
src/models/: models.py
tests/: conftest.py  test_parse.py  test_sql.py
tests/html/: total_entries.html
