[project]
name = "arxiv-scraper"
version = "0.1.0"
description = "Arxiv scraper and deleted paper monitor"
authors = [
    { name = "Patrick O'Brien", email = "721274+nullbio@users.noreply.github.com" },
]
dependencies = [
    "arxivscraper==0.0.5",
    "beautifulsoup4==4.12.3",
    "requests==2.32.3",
    "flake8==7.0.0",
    "black==24.4.2",
    "isort==5.13.2",
    "requests-ratelimiter==0.6.0",
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
    "aiosqlite==0.20.0",
    "django==5.0.6",
    "atlas-provider-django==0.1.9",
    "flake8-absolute-import==1.0.0.2",
    "djlint==1.34.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
log_cli    = 1
pythonpath = "project"
addopts    = ["--import-mode=importlib"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
pycov = "pytest --cov=project tests/"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.djlint]
max_line_length      = 300
max_attribute_length = 100
indent               = 4
